--- a/assets/css/adjusted_style.css
+++ b/assets/css/adjusted_style.css
@@ -20,6 +20,9 @@
 		3.1 Category Select
 	4. Product
 		4.1 Product Detail
+		4.2 Horizontal Padding
+		4.3 Product Promotion
+	5. Special Offer Slider
 
 *************************************/
 
@@ -74,9 +77,17 @@
 	padding: 20px;
 }
 
+/************************************
+	Horizontal Padding
+*************************************/
+
 .container{
 	max-width: 1366px;
 }
+
+/************************************
+	Product Promotion
+*************************************/
 
 .promotional-grid{
 	padding-bottom: 150px;
@@ -85,3 +96,16 @@
 }
 
 
+/************************************
+	Special Offer Slider
+*************************************/
+
+.offer-slider{
+	margin: 50px;
+	padding-bottom: 100px;
+}
+
+
+.offer-slider .slider .slider_wrapper .slider-block .slider-content .slider-text h1 {
+	color: #fcfcfc;
+}
