--- a/templates/master.html
+++ b/templates/master.html
@@ -41,20 +41,21 @@
     <link rel="stylesheet" href="{% static 'assets/css/icomoon.css' %}" >
     <link rel="stylesheet" href="{% static 'assets/css/jquery.fancybox.min.css' %}" >
     <link rel="shortcut icon" href="{% static 'assets/images/shortcut_logo.png' %}" >
-    <link rel="stylesheet" href="{% static 'assets/css/adjusted_style.css' %}" >
+{#    <link rel="stylesheet" href="{% static 'assets/css/adjusted_style.css' %}" >#}
     <title >{% block head_title %}{% endblock %}</title >
     {% block extra_head %}
     {% endblock %}
 </head >
 <body >
+
 {% if messages %}
     <div class="alert alert-success alert-dismissible fade show" role="alert" >
-        {% for message in messages %}
-            {{ message }}----------{{ message.tags }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
-                <span aria-hidden="true" >&times;</span >
-            </button >
-        {% endfor %}
+    {% for message in messages %}
+        {{ message }}----------alert-{{ message.tags }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
+            <span aria-hidden="true" >&times;</span >
+        </button >
+    {% endfor %}
     </div >
 {% endif %}
 
