--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -57,6 +57,7 @@
                       </ul>
                     </li>
                     <li class="toggleable"><a class="menu-item" href="about_us.html">About us</a></li>
+                      <li class="toggleable"><a class="menu-item" href="{% url 'shop:cattle-shop' %}">ঈদ স্পেশাল</a></li>
                   </ul>
                 </div>
               </div>
@@ -64,7 +65,6 @@
                 <div class="product-function d-flex align-items-center justify-content-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href="#"></a></div>
                     <div id="cart"><a class="function-icon icon_bag_alt" href="{% url 'shop:order-summary' %}"><span>{{ request.user|cart_item_count}}</span></a></div>
-
                 </div>
 
               </div>
